@@ -39,6 +39,8 @@ Version 0.6.7                               "I said 'Step pause turn
 
   * [all]: Include build of gtest when building gmock. (Closes: #670403)
 
+  * [all]: Fix check_boost.sh for out-of-tree builds
+
 - Documentation:
 
   * [doc]: Apply patch from Ubuntu: update Finnish manpage to point to
